// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip #handleClose (Blur/Mouseout) hides first tooltip if second is focused 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="false"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="true"
      id="tooltip-id-2"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip #handleClose (Blur/Mouseout) hides tooltip on mouseout event 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="false"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip #handleClose (Blur/Mouseout) will hide focused tooltip when second is hovered 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="false"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="true"
      id="tooltip-id-2"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip #handleClose (Blur/Mouseout) will hide hovered tooltip when second is focused 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="false"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="true"
      id="tooltip-id-2"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip #handleEscapeKeyPress closes tooltip 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="false"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip #handleEvent opens tooltip on focus 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="true"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip #handleEvent opens tooltip on mouseover 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      data-visible="true"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip API start sets attributes 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-1"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip API stop + Focus/Mouseover does not open tooltip on focus 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-1"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip API stop + Focus/Mouseover does not open tooltip on mouseover 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-1"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip Drop Direction renders bottom 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box is-drop-block-end"
      data-visible="true"
      id="tooltip-id-1"
      role="tooltip"
      style="left: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip Drop Direction renders left 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box is-drop-inline-start"
      data-visible="true"
      id="tooltip-id-1"
      role="tooltip"
      style="top: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;

exports[`Tooltip Drop Direction renders right 1`] = `
<body>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-1"
  >
    
    
    <button
      aria-describedby="tooltip-id-1"
      class="tooltip-trigger"
      data-target="tooltip-id-1"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box is-drop-inline-end"
      data-visible="true"
      id="tooltip-id-1"
      role="tooltip"
      style="top: 0px;"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  
  
  <span
    class="tooltip"
    data-tooltip="tooltip-id-2"
  >
    
    
    <button
      aria-describedby="tooltip-id-2"
      class="tooltip-trigger"
      data-target="tooltip-id-2"
    >
      Tooltip Button
    </button>
    
    
    <div
      class="tooltip-box"
      id="tooltip-id-2"
      role="tooltip"
    >
      
      This is a tooltip.
    
    </div>
    
  
  </span>
  

</body>
`;
